--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>Vite + React</title>
+    <title>AVSR Saravana Jewellery</title>
   </head>
   <body>
     <div id="root"></div>
